css/style.css
* {
  box-sizing: border-box;
}
body {
  background: lightgrey;
  font-family: 'Cardo', serif;
  font-weight: bold;
  font-size: 16px;
}
.container {
  width: 306px;
  height: 300px;
  margin: 200px auto;
}
.start {
  background-color: white;
  border: 2px solid black;
  float: right;
  margin-right: -100px;
}
.black-keys {
  margin-left: 26px;
  position: absolute;
}
li.black:nth-child(3) {
  margin-left: 45px;
}
.keys {
  border: 2px solid black;
  border-radius: 3px;
  display: inline-block;
  width: 40px;
  height: 200px;
}
.white-label li {
  display: inline-block;
  margin-top: 3px;
  width: 40px;
  text-align: center;
}
ul.black-label {
  margin-left: 20px;
}
.black-label li {
  display: inline-block;
  margin-bottom: 3px;
  margin-right: 3px;
  width: 40px;
  text-align: center;
}
.black-label li:nth-child(3) {
  margin-left: 35px;
}
.white {
  background: white;
  /*z-index: 0;*/
}
.white:hover {
  background: #ddd;
}
.black:hover {
  background: #555;
}
.black {
  background: black;
  width: 30px;
  margin-right: 10px;
  height: 100px;
  /*z-index: 2;*/
}

